# mopidy

./: .coveragerc  .gitignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS  AUTHORS.rst  AUTHORS.update  MANIFEST.in  README.md  README.rst  SECURITY.md  dev-requirements.txt  extensiondev.rst  fabfile.py  pylintrc  pyproject.toml  requirements-docs.txt  requirements-lastfm.txt  requirements-tests.txt  setup.cfg  setup.py  tasks.py  test-requirements.txt  tox.ini  zensical.toml
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  codecov.yml
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  config.yml  extension-request.md  extension.md  feature.md  feature_request.md
.github/workflows/: ci.yml  codeql-analysis.yml  release.yml  ubuntu-devel.yml
ESOF-DOCS/: 1relatorio.md  Architectural Design.md  Requirements Management.md  Software Process.md  Software Verification and Validation.md  architectural_design.md  notas.md  requirements.md  usecases-uml.mdj
data/: mopidy.desktop
debian/: .gitignore  NEWS  README.Debian  TODO  changelog  clean  control  copyright  docs  gbp.conf  links  mopidy-daemon.dirs  mopidy-daemon.init  mopidy-daemon.install  mopidy-daemon.postinst  mopidy-daemon.postrm  mopidy-doc.doc-base  mopidy-doc.docs  mopidy-doc.links  mopidy.config  mopidy.dirs  mopidy.init  mopidy.install  mopidy.lintian-overrides  mopidy.logrotate  mopidy.manpages  mopidy.menu  mopidy.postinst  mopidy.postrm  mopidy.prerm  mopidy.pydist  mopidy.service  mopidy.templates  mopidyctl  mopidyctl.8  pyversions  rules  watch
debian/daemon/: logging.conf  mopidy.conf
debian/etc/: logging.conf  mopidy.conf
debian/patches/: 0001-Make-docs-buildable-with-older-Sphinx.patch  series
debian/po/: POTFILES.in  cs.po  da.po  de.po  es.po  fr.po  it.po  ja.po  nl.po  pl.po  pt.po  pt_BR.po  ru.po  sv.po  templates.pot
docs/: Makefile  audio.rst  audiosinks.rst  authors.rst  autodoc_private_members.py  changelog.rst  changes.rst  clients.rst  codestyle.rst  command.rst  conf.py  config.rst  contributing.rst  debian.rst  despotify-issues.rst  development.rst  devenv.rst  devtools.rst  extensiondev.rst  glossary.rst  icecast.rst  index.md  index.rst  installation.rst  license.rst  licenses.rst  notes.rst  pipewire.rst  pyspotify-issues.rst  releasing.rst  requirements.txt  running.rst  service.rst  settings.rst  sponsors.rst  troubleshooting.rst  upnp.rst  versioning.rst
docs/_static/: thread_communication.txt
docs/_templates/: layout.html
docs/about/: authors.md  codestyle.md  contributing.md  devenv.md  index.md  releasing.md  sponsors.md  versioning.md
docs/api/: architecture.rst  audio.rst  backend.rst  backends.rst  commands.rst  concepts.rst  config.rst  core.rst  ext.rst  frontend.rst  frontends.rst  history.rst  http-server.rst  http.rst  httpclient.rst  index.rst  js.rst  listeners.rst  mixer.rst  mixers.rst  models.rst  mpd.rst  outputs.rst  settings.rst  zeroconf.rst
docs/changelog/: 0.x.md  1.x.md  2.x.md  3.x.md  index.md
docs/clients/: dlna.rst  http.rst  index.rst  mpd.rst  mpris.rst  upnp.rst
docs/commands/: index.rst  mopidy-convert-config.rst  mopidy-scan.rst  mopidy.rst
docs/development/: contributing.rst  index.rst  internals.rst  roadmap.rst
docs/ext/: api_explorer.rst  backends.rst  external.rst  file.md  file.rst  files.rst  frontends.rst  http.md  http.rst  index.md  index.rst  kuechenradio.rst  local.rst  lux.rst  m3u.md  m3u.rst  mixers.rst  moped.rst  mpd.rst  mpris.rst  musicbox_webclient.rst  scrobbler.rst  softwaremixer.md  softwaremixer.rst  spotify.rst  stream.md  stream.rst  web.rst
docs/guides/: audiosinks.md  debian.md  extensiondev.md  icecast.md  index.md  pipewire.md  pulseaudio.md  raspberrypi.md  upnp.md
docs/history/: changelog-0.x.rst  changelog-1.x.rst  changelog-2.x.rst  changelog-3.x.rst  index.rst
docs/includes/: abbreviations.md
docs/installation/: arch.rst  debian.rst  despotify.rst  fedora.rst  gstreamer.rst  index.md  index.rst  libspotify.rst  macos.rst  manual.md  osx.rst  packages.md  pypi.rst  raspberrypi.rst  source.rst
docs/modules/: audio.rst  gstreamer.rst  index.rst  local.rst  mpd.rst  outputs.rst
docs/reference/: architecture.md  audio.md  backend.md  command.md  config.md  core.md  exceptions.md  ext.md  frontend.md  glossary.md  http-server.md  http.md  httpclient.md  index.md  js.md  mixer.md  models.md  types.md  zeroconf.md
docs/running/: index.rst  service.rst  terminal.rst
docs/usage/: clients.md  config.md  index.md  service.md  terminal.md  troubleshooting.md
extra/desktop/: mopidy.desktop
extra/systemd/: mopidy.service
js/: Gruntfile.js  README.md  README.rst  buster.js  grunt.js  package.json
js/lib/: bane-0.3.0.js  bane-0.4.0.js  bane-1.0.0.js  console-polyfill.js  when-define-shim.js
js/src/: mopidy.js
js/test/: bind-helper.js  mopidy-test.js
mopidy/: __init__.py  __main__.py  backend.py  commands.py  compat.py  config.py  core.py  dbus_listener.py  exceptions.py  ext.py  gstreamer.py  handler.py  httpclient.py  listener.py  listeners.py  local.py  mixer.py  models.py  outputs.py  process.py  scanner.py  server.py  session.py  settings.py  types.py  utils.py  zeroconf.py
mopidy/audio/: __init__.py  actor.py  constants.py  dummy.py  icy.py  listener.py  playlists.py  scan.py  tags.py  test_utils.py  utils.py
mopidy/backend/: __init__.py  dummy.py
requirements/: README.rst  beets.txt  core.txt  external_mixers.txt  http.txt  lastfm.txt  scrobbler.txt  soundcloud.txt  spotify.txt  tests.txt
tests/: __init__.py  __main__.py  audio_test.py  commands_test.py  dummy_audio.py  dummy_backend.py  dummy_mixer.py  exceptions_test.py  ext_test.py  factories.py  gstreamer_test.py  handlertest.py  help_test.py  listeners_test.py  models_test.py  modelstest.py  path_utils.py  scanner.py  scanner_test.py  test_commands.py  test_config.py  test_exceptions.py  test_ext.py  test_help.py  test_httpclient.py  test_mixer.py  test_models.py  test_path_utils.py  test_version.py  utils_test.py  version_test.py
tools/: debug-proxy.py  idle.py
(+811 files in other folders)
