[project]
name = "mopidy"
description = "Mopidy is an extensible music server written in Python"
readme = "README.md"
requires-python = ">= 3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Stein Magnus Jodal", email = "stein.magnus@jodal.no" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
dynamic = ["version"]
dependencies = [
    "cyclopts >= 3.12",
    "httpx >= 0.28.1",
    "platformdirs >= 4.3",
    "pydantic >= 2.10",
    "pygobject >= 3.50",
    "pykka >= 4.1",
    "rich >= 13.9",
    "tornado >= 6.4",
]

[project.urls]
Homepage = "https://mopidy.com/"
Documentation = "https://docs.mopidy.com/"
"Discourse forum" = "https://discourse.mopidy.com/"
"Zulip chat" = "https://mopidy.zulipchat.com/"
Source = "https://github.com/mopidy/mopidy"
Issues = "https://github.com/mopidy/mopidy/issues"

[project.scripts]
mopidy = "mopidy._app.cli:app.meta"

[project.entry-points."mopidy.ext"]
file = "mopidy._exts.file:Extension"
http = "mopidy._exts.http:Extension"
m3u = "mopidy._exts.m3u:Extension"
softwaremixer = "mopidy._exts.softwaremixer:Extension"
stream = "mopidy._exts.stream:Extension"


[build-system]
requires = ["setuptools >= 78", "setuptools-scm >= 8.2"]
build-backend = "setuptools.build_meta"


[dependency-groups]
dev = [
    "tox >= 4.25",
    { include-group = "docs" },
    { include-group = "rumdl" },
    { include-group = "ruff" },
    { include-group = "tests" },
    { include-group = "typing" },
]
docs = [
    "mkdocstrings-python>=2.0.3",
    "zensical>=0.0.24",
]
rumdl = ["rumdl"]
ruff = ["ruff == 0.15.0"]
tests = [
    "dirty-equals >= 0.9",
    "polyfactory >= 3.1",
    "pytest >= 8.3",
    "pytest-cov >= 5.0",
    "pytest-httpx >= 0.35",
    "pytest-mock >= 3.14",
]
typing = [
    "pygobject-stubs >= 2.14.0, != 2.15.0",
    "pyright == 1.1.408",
    "ty == 0.0.14",
]


[tool.coverage.paths]
source = ["src/", "*/site-packages/"]

[tool.coverage.run]
source_pkgs = ["mopidy"]

[tool.coverage.report]
show_missing = true
exclude_also = ['if TYPE_CHECKING:', 'raise NotImplementedError']


[tool.pyright]
pythonVersion = "3.13"
# Use venv from parent directory, to share it with any extensions:
venvPath = "../"
venv = ".venv"
typeCheckingMode = "standard"
# Not all dependencies have type hints:
reportMissingTypeStubs = false
# Already covered by flake8-self:
reportPrivateImportUsage = false


[tool.pytest.ini_options]
filterwarnings = [
    "error::DeprecationWarning:mopidy[.*]",
    "ignore::PendingDeprecationWarning:mopidy[.*]",
    "ignore::DeprecationWarning:mopidy[.*]",
]


[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A002",    # builtin-argument-shadowing  # TODO
    "A003",    # builtin-attribute-shadowing
    "A005",    # stdlib-module-shadowing
    "ANN401",  # any-type
    "D100",    # undocumented-public-module  # TODO
    "D101",    # undocumented-public-class  # TODO
    "D102",    # undocumented-public-method  # TODO
    "D103",    # undocumented-public-function  # TODO
    "D104",    # undocumented-public-package  # TODO
    "D105",    # undocumented-magic-method
    "D107",    # undocumented-public-init  # TODO
    "FBT001",  # boolean-positional-arg-in-function-definition  # TODO
    "FBT002",  # boolean-default-value-in-function-definition  # TODO
    "FBT003",  # boolean-positional-value-in-function-call  # TODO
    "FIX002",  # line-contains-todo
    "FIX003",  # line-contains-fixme
    "FIX004",  # line-contains-hack
    "G004",    # logging-f-string
    "PLR2004", # magic-value-comparison
    "PLW2901", # redefined-loop-name
    "RET504",  # unnecessary-assign
    "S101",    # assert  # TODO
    "S314",    # suspicious-xml-element-tree-usage -- ElementTree is safe given expat >= 2.6.1
    "SLF001",  # private-member-access  # TODO
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    "TC003",   # typing-only-standard-library-import
    "TC006",   # runtime-cast-value
    "TRY003",  # raise-vanilla-args
    "TRY400",  # error-instead-of-exception
    #
    # Conflicting with `ruff format`
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN",     # flake8-annotations
    "ARG",     # flake8-unused-arguments
    "D",       # pydocstyle
    "FBT",     # flake8-boolean-trap
    "PLR0913", # too-many-arguments
    "PT007",   # pytest-parametrize-values-wrong-type  # TODO
    "PT009",   # pytest-unittest-assertion  # TODO
    "PT011",   # pytest-raises-too-broad  # TODO
    "S101",    # assert
    "S108",    # hardcoded-temp-file
    "SLF001",  # private-member-access
    "TRY002",  # raise-vanilla-class
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.rumdl.global]
flavor = "mkdocs"
disable = [
    "MD013",  # Line length too strict for docs with long URLs
    "MD014",  # Dollar signs before commands without output is common in docs
    "MD036",  # Bold text used legitimately as labels within list items
    "MD051",  # False positives on cross-page fragment links
]


[tool.setuptools.package-data]
"*" = ["*.conf"]
"mopidy.http.data" = ["*"]


[tool.setuptools_scm]


[tool.tox]
env_list = [
    "3.13",
    "3.14",
    "pyright",
    "rumdl",
    "ruff-check",
    "ruff-format",
    "ty",
    "docs",
]

[tool.tox.env_run_base]
package = "wheel"
wheel_build_env = ".pkg"
dependency_groups = ["tests"]
commands = [
    [
        "pytest",
        "--cov",
        "--basetemp={envtmpdir}",
        { replace = "posargs", extend = true },
    ],
]

[tool.tox.env.pyright]
dependency_groups = ["typing"]
commands = [["pyright", "{posargs:src}"]]

[tool.tox.env.rumdl]
skip_install = true
dependency_groups = ["rumdl"]
commands = [["rumdl", "check", "docs/"]]

[tool.tox.env.ruff-check]
skip_install = true
dependency_groups = ["ruff"]
commands = [["ruff", "check", "{posargs:.}"]]

[tool.tox.env.ruff-format]
skip_install = true
dependency_groups = ["ruff"]
commands = [["ruff", "format", "--check", "--diff", "{posargs:.}"]]

[tool.tox.env.ty]
dependency_groups = ["typing"]
commands = [["ty", "check", "{posargs:src}"]]

[tool.tox.env.docs]
dependency_groups = ["docs"]
commands = [["zensical", "build", "--clean"]]
