[metadata]
name = Mopidy
version = 3.0.2
url = https://mopidy.com/
project_urls =
    Documentation = https://docs.mopidy.com/
    Discourse forum = https://discourse.mopidy.com/
    Zulip chat = https://mopidy.zulipchat.com/
    Source = https://github.com/mopidy/mopidy
    Issues = https://github.com/mopidy/mopidy/issues
author = Stein Magnus Jodal
author_email = stein.magnus@jodal.no
license = Apache License, Version 2.0
license_file = LICENSE
description = Mopidy is an extensible music server written in Python
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Multimedia :: Sound/Audio :: Players


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.7
install_requires =
    Pykka >= 2.0.1
    requests >= 2.0
    setuptools
    tornado >= 4.4


[options.extras_require]
docs =
    pygraphviz
    sphinx
    sphinx_rtd_theme
lint =
    black
    check-manifest
    flake8
    flake8-bugbear
    flake8-import-order
    isort[pyproject]
    pep8-naming
release =
    twine
    wheel
test =
    pytest
    pytest-cov
    responses
dev =
    %(docs)s
    %(lint)s
    %(release)s
    %(test)s


[options.packages.find]
exclude =
    tests
    tests.*


[options.entry_points]
console_scripts =
    mopidy = mopidy.__main__:main
mopidy.ext =
    http = mopidy.http:Extension
    file = mopidy.file:Extension
    m3u = mopidy.m3u:Extension
    softwaremixer = mopidy.softwaremixer:Extension
    stream = mopidy.stream:Extension


[tool:pytest]
filterwarnings =
    error::DeprecationWarning:mopidy[.*]
    ignore::PendingDeprecationWarning:mopidy[.*]
    ignore::DeprecationWarning:mopidy[.*]


[flake8]
application-import-names = mopidy, tests
max-line-length = 80
exclude = .git, .tox, build
select =
    # Regular flake8 rules
    C, E, F, W
    # flake8-bugbear rules
    B
    # B950: line too long (soft speed limit)
    B950
    # pep8-naming rules
    N
ignore =
    # E203: whitespace before ':' (not PEP8 compliant)
    E203
    # E501: line too long (replaced by B950)
    E501
    # W503: line break before binary operator (not PEP8 compliant)
    W503
    # B305: .next() is not a thing on Python 3 (used by playback controller)
    B305
