[metadata]
name = Mopidy
version = 4.0.0a1
url = https://mopidy.com/
project_urls =
    Documentation = https://docs.mopidy.com/
    Discourse forum = https://discourse.mopidy.com/
    Zulip chat = https://mopidy.zulipchat.com/
    Source = https://github.com/mopidy/mopidy
    Issues = https://github.com/mopidy/mopidy/issues
author = Stein Magnus Jodal
author_email = stein.magnus@jodal.no
license = Apache License, Version 2.0
license_file = LICENSE
description = Mopidy is an extensible music server written in Python
long_description = file: README.rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: No Input/Output (Daemon)
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Sound/Audio :: Players


[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.11
install_requires =
    Pykka >= 4.0
    requests >= 2.0
    setuptools
    tornado >= 4.4


[options.extras_require]
docs =
    pygraphviz
    sphinx >= 3.4.3, < 7
    sphinx_autodoc_typehints >= 1.9.0
    sphinx_rtd_theme >= 0.5.1
    typing-extensions
lint =
    black
    check-manifest
    ruff == 0.0.285
test =
    pytest
    pytest-cov
    responses
typing =
    pyright
    pygobject-stubs
    types-requests
    types-setuptools
dev =
    %(docs)s
    %(lint)s
    %(test)s
    %(typing)s
    tox


[options.packages.find]
exclude =
    tests
    tests.*


[options.entry_points]
console_scripts =
    mopidy = mopidy.__main__:main
mopidy.ext =
    http = mopidy.http:Extension
    file = mopidy.file:Extension
    m3u = mopidy.m3u:Extension
    softwaremixer = mopidy.softwaremixer:Extension
    stream = mopidy.stream:Extension


[tool:pytest]
filterwarnings =
    error::DeprecationWarning:mopidy[.*]
    ignore::PendingDeprecationWarning:mopidy[.*]
    ignore::DeprecationWarning:mopidy[.*]
